# pyrogram-manager

./: pyproject.toml
pyrogram_manager/: __init__.py  dispatcher.py  patched.py
